--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,9 +1,8 @@
-<h1>Listing statuses</h1>
+<h1>All statuses</h1>
 
 <table>
   <tr>
-    <th>Name</th>
-    <th>Content</th>
+    
     <th></th>
     <th></th>
     <th></th>
